--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,107 @@
+anyascii==0.3.1
+appdirs==1.4.4
+audioread==3.0.0
+Babel==2.11.0
 black @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_d0nhgmyc3l/croots/recipe/black_1660237813406/work
 certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_05nm_gqf36/croots/recipe/certifi_1663615689491/work/certifi
+cffi==1.15.1
+charset-normalizer==2.1.1
 click @ file:///opt/concourse/worker/volumes/live/2d66025a-4d79-47c4-43be-6220928b6c82/volume/click_1646056610594/work
+contourpy==1.0.6
+coqpit==0.0.16
+cycler==0.11.0
+Cython==0.29.28
+dateparser==1.1.3
+decorator==5.1.1
+docopt==0.6.2
 et-xmlfile==1.1.0
+ffmpeg-python==0.2.0
+filelock==3.8.0
 flake8 @ file:///opt/conda/conda-bld/flake8_1648129545443/work
+Flask==2.2.2
+fonttools==4.38.0
+fsspec==2022.11.0
+future==0.18.2
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut-lang-cs==2.0.0
+gruut-lang-de==2.0.0
+gruut-lang-en==2.0.0
+gruut-lang-es==2.0.0
+gruut-lang-fr==2.0.2
+gruut-lang-it==2.0.0
+gruut-lang-nl==2.0.2
+gruut-lang-pt==2.0.0
+gruut-lang-ru==2.0.0
+gruut-lang-sv==2.0.0
+huggingface-hub==0.10.1
+idna==3.4
 importlib-metadata @ file:///opt/concourse/worker/volumes/live/a8740f82-0523-4b08-5bb5-afa0c929f5e0/volume/importlib-metadata_1648562424930/work
+inflect==5.6.0
+itsdangerous==2.1.2
+jieba==0.42.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonlines==1.2.0
+kiwisolver==1.4.4
+librosa==0.8.0
+llvmlite==0.38.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
 mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
+mecab-python3==1.0.5
+more-itertools==9.0.0
 mypy-extensions==0.4.3
-numpy==1.23.3
+networkx==2.8.8
+num2words==0.5.12
+numba==0.55.2
+numpy==1.22.4
 openpyxl==3.0.10
+packaging==21.3
 pandas==1.5.0
 pathspec @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_e2t1r2kdq7/croots/recipe/pathspec_1659627124303/work
+Pillow==9.3.0
 platformdirs @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_7fs8_2xgrm/croots/recipe/platformdirs_1662711383474/work
+pooch==1.6.0
+protobuf==3.19.6
 pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1636635402688/work
+pycparser==2.21
 pyflakes @ file:///tmp/build/80754af9/pyflakes_1636644436481/work
 pympi-ling==1.70.2
+pynndescent==0.5.8
+pyparsing==3.0.9
+pypinyin==0.47.1
+pysbd==0.3.4
+python-crfsuite==0.9.8
 python-dateutil==2.8.2
 pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
+pyworld==0.2.10
+PyYAML==6.0
+regex==2022.3.2
+requests==2.28.1
+resampy==0.4.2
+scikit-learn==1.1.3
+scipy==1.9.3
 six==1.16.0
+soundfile==0.11.0
 sox==1.4.1
+tensorboardX==2.5.1
+threadpoolctl==3.1.0
+tokenizers==0.13.2
 tomli @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_90762ba4-f339-47e8-bd29-416854a59b233d27hku_/croots/recipe/tomli_1657175507767/work
+torch==1.13.0
+torchaudio==0.13.0
 tqdm==4.64.1
+trainer==0.0.16
+transformers==4.24.0
+TTS==0.8.0
+typing_extensions==4.4.0
+tzdata==2022.6
+tzlocal==4.2
+umap-learn==0.5.1
+unidic-lite==1.0.8
+urllib3==1.26.12
+Werkzeug==2.2.2
+whisper @ git+https://github.com/openai/whisper.git@9f70a352f9f8630ab3aa0d06af5cb9532bd8c21d
 zipp @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b279673d-f037-44c7-8773-c5a6b6f51037d3wfr9cq/croots/recipe/zipp_1652341773612/work
